src/gadgets/site-styles/Gadget-site-styles.css
/* ... */
.tab .Tabs.tabLabelLeft .TabContent,
.tab .Tabs.tabLabelRight .TabLabel {
    order: 3;
}

.tab .Tabs.tabLabelLeft,
.tab .Tabs.tabLabelRight {
    display: flex;
    flex-wrap: nowrap;
    width: auto;
}

.tab .Tabs.tabLabelLeft .TabDivider,
.tab .Tabs.tabLabelRight .TabDivider {
    height: 100%;
    width: 0;
}

.tab .Tabs.tabLabelLeft.reverse .TabDivider,
.tab .Tabs.tabLabelRight.reverse .TabDivider {
    width: 1px;
}

.tab .Tabs.tabLabelLeft .TabLabel,
.tab .Tabs.tabLabelRight .TabLabel {
    flex-direction: column;
}

.tab .Tabs.tabLabelLeft:not(.AutoWidth) .TabContent,
.tab .Tabs.tabLabelRight:not(.AutoWidth) .TabContent {
    flex: 1;
}

.Tabs {
    max-width: 100%;
}

.Tabs.AutoWidth {
    display: table-cell;
}

.Tabs.FloatLeft {
    float: left;
    margin-right: 1em;
}

.Tabs.FloatRight {
    float: right;
    margin-left: 1em;
}

.Tabs .Tab {
    border-bottom: 1px solid #aaa;
}

.Tabs .Tab:first-child {
    border-top: 1px solid #aaa;
}

.Tabs .Tab .TabLabelText {
    padding: 7px;
}

.Tabs .Tab .TabContentText {
    padding: 3px;
}

.infotemplatebox > table td > .Tabs .TabLabel,
.infotemplatebox > table td > .Tabs .TabContent {
    margin: 0 -1px;
}

/* 注解 */
.annotation > span {
    cursor: pointer;
}

.annotation .oo-ui-popupWidget {
    z-index: 1000001;
    white-space: normal;
    color: #000;
    font-weight: normal;
}

.annotation .oo-ui-popupWidget-popup {
    width: fit-content !important;
}

.annotation .oo-ui-popupWidget-body {
    width: fit-content;
    min-width: 5.5em;
    max-width: 11em !important;
    overflow: auto;
}

/* 列表的上边距导致[[T:columns-list]]首列少一行 */
.columns-list > ul:first-child,
.columns-list > ol:first-child {
    margin-top: 0;
}

/*
 * 感谢[[User:Great Brightstar]]的贡献，源码来自[[special:diff/834104]]
 * 以下是原注释：
 * 在这里使用 font-feature-settings 属性会让使用“lang”标签的元素强制使用 OpenType 技术显示本地化的变体字（通过激活 locl 标签，即便浏览器本身不直接激活）。
 * 如果你使用思源黑体（非 CN、JP、KO、TW 版）、Noto Sans CJK 显示文字的话就有可能看到效果。
 * 关于上述这个 CSS 属性的用法，参阅：https://developer.mozilla.org/en-US/docs/Web/CSS/font-feature-settings 注意：此文引用的 OpenType Feature Tags list 同样需要关注。
 * 如有任何问题请即刻禁用之
 * Nbdd0121: 将原来的[lang]改为span[lang]，这样就不会影响非{{lang}}的[lang]了 (e.g. div#mw-content-text)
 */
span[lang] {
    font-family: initial;
    font-feature-settings: "locl" on;
    -webkit-font-feature-settings: "locl" on;
}

[style*="font:" i] span[lang],
[style*="font-family:" i] span[lang] {
    font-family: inherit;
}

/* 日语斜体 */
@font-face {
    font-family: JapaneseItalic;
    src: local(meiryo);
}

:is(i, [style*="italic" i]) span[lang="ja" i],
span[lang="ja" i] :is(i, [style*="italic" i]) {
    font-family: JapaneseItalic, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
}

:is([style*="font:" i], [style*="font-family:" i]) :is(i, [style*="italic" i]) span[lang="ja" i],
:is([style*="font:" i], [style*="font-family:" i]) span[lang="ja" i] :is(i, [style*="italic" i]) {
    font-family: inherit;
}

/* 黑幕模板配合CSS */
.heimu,
.heimu rt {
    --heimu-color: #252525;
    --heimu-text-color: #fff;
    --heimu-link-color: #add8e6;
    --heimu-visited-link-color: #c5cae9;
    --heimu-new-link-color: #fcc;
    --heimu-new-visited-link-color: #ef9a9a;
    --heimu-extiw-visited-link-color: #d1c4e9;

    background-color: var(--heimu-color);
}

.heimu,
.heimu a,
a .heimu,
a.new .heimu,
span.heimu a:visited,
span.heimu a.new,
span.heimu a.external,
span.heimu a.external:visited,
span.heimu a.extiw,
span.heimu a.extiw:visited,
span.heimu a.mw-disambig,
span.heimu a.mw-redirect {
    transition: color 0.13s linear;
    color: var(--heimu-color);
    /* NO TRANSPARENT!!! */
    text-shadow: none;
}

span.heimu:hover,
span.heimu:active {
    color: var(--heimu-text-color);
}

span.heimu:hover a,
a:hover span.heimu {
    color: var(--heimu-link-color);
}

span.heimu:hover a:visited,
a:visited:hover span.heimu {
    color: var(--heimu-visited-link-color);
}

span.heimu:hover a.new,
a.new:hover span.heimu {
    color: var(--heimu-new-link-color);
}

span.heimu a.new:hover:visited,
a.new:hover:visited span.heimu {
    color: var(--heimu-new-visited-link-color);
}

span.heimu:hover a.extiw:visited,
a.extiw:visited:hover span.heimu {
    color: var(--heimu-extiw-visited-link-color);
}

/* 黑幕 暗色模式 */
[color-mode="dark"] .heimu,
[color-mode="dark"] .heimu rt {
    --heimu-color: #5e6272;
}

/* 胡话模板配合CSS */
s.just-kidding-text {
    color: #666;
    text-decoration-color: #000;
}

/* info类模板 */
.infoBox {
    margin: 0 auto;
    width: 80%;
    box-sizing: border-box;
}

.infoBoxTitle {
    margin: 3px auto;
    padding: 0;
    text-align: center;
    font-weight: 700;
}

.infoBoxIcon {
    display: table-cell;
    padding: 2px 0 2px 0.5em;
    vertical-align: middle;
}

.infoBoxText {
    display: table-cell;
    padding: 0.25em 0.5em 0.25em 1.3em;
    width: 100%;
    vertical-align: middle;
}

.infoBoxContent {
    border: 1px solid #ddd;
    border-left-width: 0;
    background: #fbfbfb;
}

.infoBoxBelow {
    margin: 0 auto;
    padding: 0;
    text-align: center;
}

[color-mode="dark"] .infoBoxContent {
    border-color: #3e4452;
    background: #23272e;
}

/* wikitable green */
table.wikitable-green {
    background: #c9f6e1;
}

.wikitable-green th {
    background: #13ec93;
}

.wikitable-green td {
    background: #f3f3f3;
}

/* 隐藏只供维护人员查看的内容 */
.patroller-show,
.checkuser-show,
.suppress-show,
.sysop-show,
.interface-admin-show {
    display: none !important;
}

/* Ruby 模板 */
rb[data-id="template-ruby"]::before {
    content: "";
}

rb[data-id="template-ruby"]::before,
.template-ruby-hidden {
    display: inline-block;
    width: 0;
    font-size: 0;
}

/* 修正可能的mmv背景错误 */
body .mw-mmv-overlay {
    z-index: 9999;
}

body .mw-mmv-wrapper {
    z-index: 99999;
}

/* Edittool */
.noconvins > .mw-charinsert-item::before {
    content: "-{";
}

.noconvins > .mw-charinsert-item::after {
    content: "}-";
}

/* 修复修订滑块悬浮窗层级 */
.mw-revslider-tooltip {
    z-index: 7;
}

/* 滥用过滤器警告消息 */
.errorbox ul {
    list-style: none;
}
/* ... */

